# logicaldecoding

./: .env  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  docker-compose.yaml
migrations/: 20221009093923_create_tables.down.sql  20221009093923_create_tables.up.sql
src/: main.rs  pg_logicaldec.proto  replication.rs
src/types/: mod.rs
src/types/tenant/: mod.rs
src/types/tenant/fixtures/: tenants.sql
src/types/tenant/queries/: create.sql  delete.sql  retrieve.sql  retrieve_all.sql  retrieve_many.sql  update.sql
